# vive_tracker_loc

./: .gitignore  CMakeLists.txt  Makefile  OG_Makefile  README.md  a.out  calibrate  calibrate.c  calibrate_client  config.json  custom_poser_analysis.txt  data_recorder  notes.txt  opencv_pose_calc  opencv_pose_calc.cpp  opencv_pose_calc.h  output.txt  package.xml  runposer
calinfo/: WM0_normals.csv  WM0_points.csv  histograms.csv  objposes.csv  ptinfo.csv
extras/: custom_poser_analysis.txt  poser_turveytori_w_comments.c  testrun1  testrun2  testrun3  testrun4  testruns.txt
include/posecalc/: opencv_pose_calc.h  poser_pollackpnp.h
include/survive/: survive.h  survive_types.h
launch/: calibrate.launch  tracker_demo_config.rviz
scripts/: opencv_test_script.py  point_publisher.py  tf_calibration.py
setup/: sample-config.json  sample-config.json~
src/: opencv_pose_calc.cpp  poser_octavioradii.c  poser_pollack.c  poser_pollackpnp.c  poser_pollackradii.c  poser_turveytori.c  runposer.c  survive.c  survive_cal.c  survive_process.c  survive_vive.c  vive_pose_node.cpp
